# DevEnv-Doctor

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: mvp.md  requirements.md  rules.md  use-cases.md
docs/diagrams/: use-cases-diagram.puml
src/devenv_doctor/: __main__.py  cli.py  runner.py
src/devenv_doctor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/devenv_doctor/checks/: compose.py  compose_utils.py  docker.py  environment.py  environment_utils.py
src/devenv_doctor/core/: __init__.py  command.py
tests/: test_cli.py  test_command.py  test_compose_checks.py  test_docker_checks.py  test_environment_checks.py  test_runner.py
