[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devenv-doctor"
version = "0.1.0"
description = "CLI tool that analyzes local Docker development environments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "PyYAML>=6.0",
]

[project.scripts]
devenv-doctor = "devenv_doctor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
